[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/ResourceMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ResourceCounter.gd" type="Script" id=2]
[ext_resource path="res://kenny_iso_td/iso_td/towerDefense_075_3.png" type="Texture" id=3]

[node name="ResourceMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1026.0
margin_bottom = 612.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ResourceUI" type="WindowDialog" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 60.0
margin_right = 944.0
margin_bottom = 543.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Resource Menu"
resizable = false

[node name="ResourceCounter" type="Label" parent="ResourceUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 542.0
margin_top = 122.0
margin_right = 714.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="ResourceUI" index="2"]

position = Vector2( 130.596, 167.327 )
texture = ExtResource( 3 )

[connection signal="activate_resource_counter" from="." to="ResourceUI/ResourceCounter" method="_on_ResourceMenu_activate_resource_counter"]

[connection signal="minus_resources" from="." to="ResourceUI/ResourceCounter" method="_on_ResourceMenu_minus_resources"]


